vertical align travelr buttons, fix links, coming soon for recorderly

--- a/scss/components/small-project.scss
+++ b/scss/components/small-project.scss
@@ -87,6 +87,11 @@
         opacity: 0;
         transform: scale(0);
 
+        .mobile-btn-wrapper {
+            display: flex;
+            flex-direction: column;
+        }
+
         .case-study-btn {
             width: 300px;
             border: 3px solid #fff;
