--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1035,6 +1035,10 @@ a {
   opacity: 0;
   transform: scale(0);
 }
+.mobile-showcase .mobile-showcase-text .mobile-btn-wrapper {
+  display: flex;
+  flex-direction: column;
+}
 .mobile-showcase .mobile-showcase-text .case-study-btn {
   width: 300px;
   border: 3px solid #fff;
